<resources>
    <string name="app_name">Chat App</string>
    <string name="new_contact">Select Contact</string>
    <string name="new_call">Select Contact</string>
    <string name="tab_chats">Chats</string>
    <string name="tab_status">Status</string>
    <string name="tab_calls">Calls</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="search">Search</string>
    <!--    Toolbar menu-->
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="linked_devices">Linked devices</string>
    <string name="starred_messages">Starred messages</string>
    <string name="settings">Settings</string>
    <string name="company_name">Merin</string>
    <string name="from">from</string>
    <string name="my_status">My Status</string>
    <string name="update_status_text">Tap to add status update</string>
    <string name="recent_updates">Recent updates</string>
    <string name="app_welcome">Welcome to WhatsClone</string>
    <string name="policy_agreement">Read our privacy policy here. Tap on Agree and Continue to accept all terms of service</string>
    <string name="agree_and_continue">Agree and Continue</string>
</resources>