<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/viewPagerFragment">

    <fragment
        android:id="@+id/viewPagerFragment"
        android:name="com.devmuyiwa.chatapp.presentation.main.fragment.viewPager.ViewPagerFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_view_pager">
        <action
            android:id="@+id/action_viewPagerFragment_to_newCallFragment"
            app:destination="@id/newCallFragment" />
        <action
            android:id="@+id/action_viewPagerFragment_to_newContactFragment"
            app:destination="@id/newContactFragment" />
    </fragment>
    <fragment
        android:id="@+id/newContactFragment"
        android:name="com.devmuyiwa.chatapp.presentation.main.fragment.newContact.NewContactFragment"
        android:label="@string/new_contact"
        tools:layout="@layout/fragment_new_contact" />
    <fragment
        android:id="@+id/newCallFragment"
        android:name="com.devmuyiwa.chatapp.presentation.main.fragment.newCall.NewCallFragment"
        android:label="@string/new_call"
        tools:layout="@layout/fragment_new_call" />
</navigation>