<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorOnPrimary"
    android:paddingHorizontal="14dp"
    android:layout_height="match_parent"
    tools:context=".presentation.onboarding.fragment.welcome.WelcomeFragment">

    <TextView
        android:id="@+id/app_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/app_welcome"
        android:textAlignment="center"
        android:textColor="@color/teal_green_dark"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/agree_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_welcome"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/whatsapp_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy_agreement"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toTopOf="@+id/agree_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/agree_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="?colorPrimary"
        android:text="@string/agree_and_continue"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>