<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_status_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="14dp"
    android:paddingTop="14dp"
    tools:context=".presentation.main.fragment.viewPager.pagerItem.status.StatusFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white_gray"
        android:src="@drawable/dummy_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/round_white_bg"
        app:layout_constraintBottom_toBottomOf="@id/user_image"
        app:layout_constraintEnd_toEndOf="@id/user_image"
        app:srcCompat="@drawable/ic_add"
        app:tint="?colorPrimary" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_image"
        app:layout_constraintTop_toTopOf="@+id/user_image">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="1"
            android:text="@string/my_status"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/last_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/update_status_text"
            android:textSize="14sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/recent_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/recent_updates"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/status_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recent_updates"
        tools:layout_editor_absoluteX="14dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:tint="?colorOnPrimary"
        app:srcCompat="@drawable/ic_camera" />
</androidx.constraintlayout.widget.ConstraintLayout>